Fixed jumping icon

--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -103,7 +103,7 @@
 
 .cbp-af-header.cbp-af-header-shrink h1,
 .cbp-af-header.cbp-af-header-shrink nav a {
-	line-height: 90px;
+
 }
 
 .cbp-af-header.cbp-af-header-shrink h1 {
